refactor: CredentialInfo -> Credential
